chore: add pagination_key param into swagger
