# docs/swagger.json
@@ -28,6 +28,14 @@
                     "application/json"
                 ],
                 "summary": "Get Active Finality Providers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Pagination key to fetch the next page of finality providers",
+                        "name": "pagination_key",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "A list of finality providers sorted by ActiveTvl in descending order",
@@ -68,6 +76,12 @@
                         "name": "staker_btc_pk",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pagination key to fetch the next page of delegations",
+                        "name": "pagination_key",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -394,6 +408,9 @@
                     "type": "integer"
                 },
                 "total_tvl": {
+                    "type": "integer"
+                },
+                "unconfirmed_tvl": {
                     "type": "integer"
                 }
             }
