# internal/api/handlers/finality_provider.go
@@ -10,6 +10,7 @@ import (
 // @Summary Get Active Finality Providers
 // @Description Fetches details of all active finality providers sorted by their active total value locked (ActiveTvl) in descending order.
 // @Produce json
+// @Param  pagination_key query string false "Pagination key to fetch the next page of finality providers"
 // @Success 200 {object} PublicResponse[[]services.FpDetailsPublic] "A list of finality providers sorted by ActiveTvl in descending order"
 // @Router /v1/finality-providers [get]
 func (h *Handler) GetFinalityProviders(request *http.Request) (*Result, *types.Error) {
